fine-tuned recent-dates

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -91,7 +91,8 @@
                     </tr>
                     <tr>
                         <!-- A1 -->
-                        <th class="A1 conjugations" colspan="2">présent</th>
+                        <th data-key="exercise_present.html conjugations.html?Le%20pr%C3%A9sent" class="A1 conjugations"
+                            colspan="2">présent</th>
                         <th data-key="exercise_devoir_pouvoir_falloir_vouloir.html" class="A1 conjugations-plus"
                             colspan="1">Devoir Vouloir Pouvoir Falloir</th>
                         <th data-key="exercise_mon_ton_son.html" class="A1 others" colspan="1">Mon Ton Son</th>
@@ -99,7 +100,8 @@
                         <th data-key="exercise_ce_ces_cet.html" class="A1 others" colspan="1">Ce Ces Cet</th>
                         <th data-key="exercise_quand_comment_combien.html" class="A1 others" colspan="1">Quand Comment
                             Combien Où</th>
-                        <th class="A1 conjugations" colspan="2">passé composé</th>
+                        <th data-key="exercise_presentperfect.html conjugations.html?Le%20pass%C3%A9%20compos%C3%A9"
+                            class="A1 conjugations" colspan="2">passé composé</th>
                         <th data-key="exercise_qui_quel_quelle.html" class="A1 others" colspan="1">Qui Que Quel Quelle
                         </th>
 
@@ -107,7 +109,8 @@
                         <th data-key="exercise_avoir_etre.html" class="A2 conjugations-plus" colspan="1">Avoir ou Être
                         </th>
                         <th data-key="exercise_mien_sien.html" class="A2 others" colspan="1">Mien Sien</th>
-                        <th class="A2 conjugations" colspan="2">imparfait</th>
+                        <th data-key="exercise_imperfect.html conjugations.html?L%27imparfait" class="A2 conjugations"
+                            colspan="2">imparfait</th>
                         <th class="A2 tense-sequence" colspan="1">
                             <span class="full-name">imparfait - passé&nbsp;composé</span>
                             <span class="short-name" title="imparfait - passé composé">i.-p.c.</span>
@@ -121,7 +124,8 @@
                         <th class="A2 others" colspan="1">Lui Leur</th>
                         <th class="A2 others" colspan="1" title="négation 1">nég.1</th>
                         <th class="A2 others" colspan="1" title="négation 2">nég.2</th>
-                        <th class="A2 conjugations" colspan="2">impératif</th>
+                        <th data-key="exercise_imperative.html conjugations.html?L%27impératif" class="A2 conjugations"
+                            colspan="2">impératif</th>
 
                         <!-- B1 -->
                         <th class="B1 conjugations" colspan="2">plus-que-parfait</th>
@@ -132,8 +136,10 @@
                         </th>
                         <th class="B1 others" colspan="1">Que ou Dont</th>
                         <th class="B1 others" colspan="1">Qui Que Dont Où</th>
-                        <th class="B1 conjugations" colspan="2">conditionnel présent</th>
-                        <th class="B1 conjugations" colspan="2">subjonctif présent</th>
+                        <th data-key="exercise_conditionalpresent.html conjugations.html?Le%20conditionnel%20pr%C3%A9sent"
+                            class="B1 conjugations" colspan="2">conditionnel présent</th>
+                        <th data-key="exercise_presentsubjunctive.html conjugations.html?Le%20subjonctif%20pr%C3%A9sent"
+                            class="B1 conjugations" colspan="2">subjonctif présent</th>
 
                         <!-- B2 -->
                         <th class="B2 others" colspan="1">Ce&nbsp;qui Ce&nbsp;que Ce&nbsp;dont Ce&nbsp;à&nbsp;quoi</th>
@@ -146,7 +152,8 @@
                             <span class="short-name" title="Les phrases de condition">si...</span>
                         </th>
                         <th class="B2 conjugations-plus" colspan="1">passif</th>
-                        <th class="B2 conjugations" colspan="2">futur antérieur</th>
+                        <th data-key="exercise_futureperfect.html conjugations.html?Le%20futur%20ant%C3%A9rieur"
+                            class="B2 conjugations" colspan="2">futur antérieur</th>
                         <th data-key="exercise_concordance_future.html" class="B2 tense-sequence">
                             <span class="full-name">futur simple - futur antérieur</span>
                             <span class="short-name" title="futur simple - futur antérieur">f.s.-f.a.</span>
