added text exercise for que-dont

--- a/french/index.html
+++ b/french/index.html
@@ -272,6 +272,12 @@
     <a href="pages/exercise_negation2.html">exercice de texte</a>
   </div>
 
+  <div class="card">
+    <span class="cefr">B1</span>
+    <header>Que ou Dont</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_que_dont.html">exercice de texte</a>
+  </div>
   <hr />
 
   <h3>
