--- a/french/pages/exercise_qui_que.html
+++ b/french/pages/exercise_qui_que.html
@@ -30,7 +30,7 @@
                     <section>
                         <h4>Complétez les phrases suivantes en utilisant les pronoms <i>qui</i> et <i>que</i>.</h4>
 
-                        <ol>
+                        <ol class="short-input">
                             <li>
                                 J’ai une <b title="qui">sœur</b>
                                 <input type="text" pattern="qui">
@@ -68,7 +68,7 @@
                     <section>
                         <h4>Complétez les phrases suivantes en utilisant les pronoms <i>qui</i> et <i>que</i>.</h4>
 
-                        <ol>
+                        <ol class="short-input">
                             <li>
                                 Je vais boire le <b title="que">vin</b>
                                 <input type="text" pattern="que">
@@ -106,7 +106,7 @@
                     <section>
                         <h4>Complétez les phrases suivantes en utilisant les pronoms <i>qui</i> et <i>que</i>.</h4>
 
-                        <ol>
+                        <ol class="short-input">
                             <li>
                                 <b title="qui">La femme</b>
                                 <input type="text" pattern="qui">
