--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -134,7 +134,7 @@
                             <span class="short-name"
                                 title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</span>
                         </th>
-                        <th class="B1 others" colspan="1">Que ou Dont</th>
+                        <th data-key="exercise_que_dont.html" class="B1 others" colspan="1">Que ou Dont</th>
                         <th class="B1 others" colspan="1">Qui Que Dont Où</th>
                         <th data-key="exercise_conditionalpresent.html conjugations.html?Le%20conditionnel%20pr%C3%A9sent"
                             class="B1 conjugations" colspan="2">conditionnel présent</th>
@@ -214,7 +214,7 @@
 
                         <th class="B1 tense-sequence"><a href="exercise_concordance3.html">texte</a></th>
 
-                        <th class="B1 others">texte</th>
+                        <th class="B1 others"><a href="exercise_que_dont.html">texte</a></th>
                         <th class="B1 others">texte</th>
 
                         <!-- conditionnel présent -->
