fine-tuned y-en

--- a/french/pages/exercise_y_en.html
+++ b/french/pages/exercise_y_en.html
@@ -185,7 +185,7 @@
                             </li>
 
                             <li>
-                                <span title="Je dois y aller.">J’ai mal aux dents. Je dois aller <b>chez le
+                                <span title="Je dois y aller.">Je dois aller <b>chez le
                                         dentiste</b>.</span>
                                 <span><input type="text" pattern="Je dois y aller[.]?"></span>
                             </li>
@@ -258,23 +258,24 @@
                             </li>
 
                             <li>
-                                <span title="j'y ai réfléchi">Avez-vous réfléchi <b>à ma proposition</b> ?</span>
-                                <span>Oui,&nbsp;<input type="text" pattern="j'y ai réfléchi">.</span>
+                                <span title="nous y avons réfléchi">Avez-vous réfléchi <b>à ma proposition</b> ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous y avons réfléchi">.</span>
                             </li>
 
                             <li>
                                 <span title="Andrea n'y va pas">Andrea va-t-elle <b>à Ottawa</b> cette fin de semaine
                                     ?</span>
-                                <span>Oui,&nbsp;<input type="text" pattern="Andrea n'y va pas">.</span>
+                                <span>Non,&nbsp;<input type="text" pattern="Andrea n'y va pas">.</span>
                             </li>
 
                             <li>
-                                <span title="J'y reste deux jours">Vous restez <b>à Québec</b> un ou deux jours ?</span>
+                                <span title="J'y reste deux jours">Vous restez <b>à Québec</b> un ou deux jours ?
+                                    (2)</span>
                                 <span><input type="text" pattern="J'y reste deux jours">.</span>
                             </li>
 
                             <li>
-                                <span title="J'en ai un">Combien <b>d’animaux</b> avez-vous ? (1)</span>
+                                <span title="J'en ai un">Combien <b>d’animaux</b> ai-je ? (1)</span>
                                 <span><input type="text" pattern="J'en ai un">.</span>
                             </li>
 
