--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -118,7 +118,7 @@
                         <th class="A2 conjugations" colspan="2">futur simple</th>
                         <th data-key="exercise_time_prepositions.html" class="A2 others" colspan="1"
                             title="prépositions de temps">prép. de temps</th>
-                        <th class="A2 others" colspan="1">Y En</th>
+                        <th data-key="exercise_y_en.html" class="A2 others" colspan="1">Y En</th>
                         <th class="A2 others" colspan="1">Qui ou Que</th>
                         <th class="A2 others" colspan="1">Ceci Cela Celui</th>
                         <th class="A2 others" colspan="1">Lui Leur</th>
