added test exercise for qui-que-dont-ou

--- a/french/index.html
+++ b/french/index.html
@@ -278,6 +278,15 @@
     <a class="theory">théorie</a>
     <a href="pages/exercise_que_dont.html">exercice de texte</a>
   </div>
+
+  <div class="card">
+    <span class="cefr">B1</span>
+    <header>Qui, Que, Dont, Où</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_qui_que_dont_ou.html">exercice de texte</a>
+  </div>
+
+
   <hr />
 
   <h3>
