--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -215,7 +215,7 @@
                         <th class="B1 tense-sequence"><a href="exercise_concordance3.html">texte</a></th>
 
                         <th class="B1 others"><a href="exercise_que_dont.html">texte</a></th>
-                        <th class="B1 others">texte</th>
+                        <th class="B1 others"><a href="exercise_qui_que_dont_ou.html">texte</a></th>
 
                         <!-- conditionnel présent -->
                         <th class="B1 conjugations"><a
