fine-tuned y-en

--- a/french/pages/exercise_y_en.html
+++ b/french/pages/exercise_y_en.html
@@ -269,9 +269,9 @@
                             </li>
 
                             <li>
-                                <span title="J'y reste deux jours">Vous restez <b>à Québec</b> un ou deux jours ?
+                                <span title="Nous y restons deux jours">Vous restez <b>à Québec</b> un ou deux jours ?
                                     (2)</span>
-                                <span><input type="text" pattern="J'y reste deux jours">.</span>
+                                <span><input type="text" pattern="Nous y restons deux jours">.</span>
                             </li>
 
                             <li>
@@ -292,11 +292,9 @@
                             </li>
 
                             <li>
-                                <span title="nous n'en mangeons pas tous les jours">Mangez-vous <b>de la viande</b> tous
-                                    les
-                                    jours ?</span>
-                                <span>Non,&nbsp;<input type="text"
-                                        pattern="nous n'en mangeons pas tous les jours">.</span>
+                                <span title="nous n'en mangeons pas">Mangez-vous <b>de la viande</b> tous les jours
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'en mangeons pas">.</span>
                             </li>
 
                             <li>
