added text exercise for Tout

--- a/french/index.html
+++ b/french/index.html
@@ -274,6 +274,13 @@
 
   <div class="card">
     <span class="cefr">B1</span>
+    <header>Tout</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_tout.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">B1</span>
     <header>Que ou Dont</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_que_dont.html">exercice de texte</a>
