added Tout to stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -85,7 +85,7 @@
                         <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
                         <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="16">
                             A2</th>
-                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="9">B1</th>
+                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="10">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
                             B2</th>
                     </tr>
@@ -134,6 +134,7 @@
                             <span class="short-name"
                                 title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</span>
                         </th>
+                        <th data-key="exercise_tout.html" class="B1 others" colspan="1">Tout</th>
                         <th data-key="exercise_que_dont.html" class="B1 others" colspan="1">Que ou Dont</th>
                         <th class="B1 others" colspan="1">Qui Que Dont Où</th>
                         <th data-key="exercise_conditionalpresent.html conjugations.html?Le%20conditionnel%20pr%C3%A9sent"
@@ -214,6 +215,7 @@
 
                         <th class="B1 tense-sequence"><a href="exercise_concordance3.html">texte</a></th>
 
+                        <th class="B1 others"><a href="exercise_tout.html">texte</a></th>
                         <th class="B1 others"><a href="exercise_que_dont.html">texte</a></th>
                         <th class="B1 others"><a href="exercise_qui_que_dont_ou.html">texte</a></th>
 
@@ -307,6 +309,7 @@
 
                             <td class="B1 tense-sequence" data-key="exercise_concordance3.html"></td>
 
+                            <td class="B1 others" data-key="exercise_tout.html"></td>
                             <td class="B1 others" data-key="exercise_que_dont.html"></td>
                             <td class="B1 others" data-key="exercise_qui_que_dont_ou.html"></td>
 
