added text exercise IL EST - C'EST (incomplete)

--- a/french/index.html
+++ b/french/index.html
@@ -190,6 +190,13 @@
 
   <div class="card">
     <span class="cefr">A1</span>
+    <header>Il est, c'est</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_il_est.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A1</span>
     <header>De, du, des</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_de_du_des.html">exercice de texte</a>
