made qui-que show in stats for Recent Days

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -119,7 +119,7 @@
                         <th data-key="exercise_time_prepositions.html" class="A2 others" colspan="1"
                             title="prépositions de temps">prép. de temps</th>
                         <th data-key="exercise_y_en.html" class="A2 others" colspan="1">Y En</th>
-                        <th class="A2 others" colspan="1">Qui ou Que</th>
+                        <th data-key="exercise_qui_que.html" class="A2 others" colspan="1">Qui ou Que</th>
                         <th class="A2 others" colspan="1">Ceci Cela Celui</th>
                         <th class="A2 others" colspan="1">Lui Leur</th>
                         <th class="A2 others" colspan="1" title="négation 1">nég.1</th>
