fine-tuning Il-Est (incomplete)

--- a/french/pages/exercise_il_est.html
+++ b/french/pages/exercise_il_est.html
@@ -35,193 +35,198 @@
                                 Connaissez-vous mon père ? <br />
 
                                 <input type="text" pattern="C'est">
-                                un grand homme aux cheveux bruns. <br />
+                                <b title="C'est">un grand homme</b> aux cheveux bruns. <br />
 
                                 <input type="text" pattern="Il est">
-                                professeur de linguistique. <br />
+                                <b title="Il est">professeur</b> de linguistique. <br />
 
                                 <input type="text" pattern="C'est">
-                                un très bon enseignant. <br />
+                                un très bon <b title="C'est">enseignant</b>. <br />
 
                                 <input type="text" pattern="Il est">
-                                aussi entraîneur de sport dans ses temps libres. <br />
+                                aussi <b title="Il est">entraîneur</b> de sport dans ses temps libres. <br />
 
                                 <input type="text" pattern="Il est">
-                                très compétent dans tout ce qu’il fait. <br />
+                                très <b title="Il est">compétent</b> dans tout ce qu’il fait. <br />
                             </li>
 
                             <li>
                                 L’autre jour, chez mes parents, j’ai revu ma vieille tante Berthe. <br />
 
                                 <input type="text" pattern="C'est">
-                                la sœur de ma mère. <br />
+                                <b title="C'est">la sœur</b> de ma mère. <br />
 
                                 <input type="text" pattern="Elle est">
-                                si gentille. <br />
+                                si <b title="Elle est">gentille</b>. <br />
 
                                 <input type="text" pattern="C'est">
-                                une dame qui parle quatre langues. <br />
+                                <b title="C'est">une dame</b> qui parle quatre langues. <br />
 
                                 <input type="text" pattern="Elle est">
-                                très active dans la communauté. <br />
+                                très <b title="Elle est">active</b> dans la communauté. <br />
 
                                 <input type="text" pattern="C'est">
-                                une personne croyante qui pratique la religion tous les jours. <br />
+                                une <b title="C'est">personne</b> croyante qui pratique la religion tous les jours.
+                                <br />
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il est">
-                                bon pour la santé d’être végétarien.
+                                <b title="Il est">bon</b> pour la santé d’être végétarien.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il était">
-                                une fois, un homme et sa fille qui vivaient pauvrement. Un jour ...
+                                <b title="Il était">une fois</b>, un homme et sa fille qui vivaient pauvrement. Un jour
+                                ...
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il est">
-                                trop tôt pour entrer dans la salle. Attendons à l’extérieur.
+                                trop <b title="Il est">tôt</b> pour entrer dans la salle. Attendons à l’extérieur.
                             </li>
 
                             <li>
                                 Vous savez recoudre un bouton ?
                                 <input type="text" pattern="C'est">
-                                très facile à faire.
+                                très <b title="C'est">facile</b> à faire.
                             </li>
 
                             <li>
                                 Aujourd’hui,
                                 <input type="text" pattern="c'est">
-                                le grand jour. Rémi et moi, nous nous marions !
+                                le grand <b title="c'est">jour</b>. Rémi et moi, nous nous marions !
                             </li>
 
                             <li>
                                 Cette femme fait des plans de maisons.
                                 <input type="text" pattern="Elle est">
-                                architecte.
+                                <b title="Elle est">architecte</b>.
                                 <input type="text" pattern="Elle est">
-                                très connue.
+                                très <b title="Elle est">connue</b>.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il est">
-                                important de venir vous inscrire à cette activité.
+                                <b title="Il est">important</b> de venir vous inscrire à cette activité.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il est">
-                                midi.
+                                <b title="Il est">midi</b>.
                                 <input type="text" pattern="C'est">
-                                le temps de manger. J’ai faim !
+                                <b title="C'est">le temps</b> de manger. J’ai faim !
                             </li>
 
                             <li>
                                 J’ai appris l’allemand.
                                 <input type="text" pattern="C'est">
-                                très difficile de parler cette langue.
+                                très <b title="C'est">difficile</b> de parler cette langue.
                             </li>
 
                             <li>
                                 Faire la vaisselle et le ménage,
                                 <input type="text" pattern="c'est">
-                                ennuyeux.
+                                <b title="c'est">ennuyeux</b>.
                             </li>
 
                             <li>
                                 Il pleut.
                                 <input type="text" pattern="Il est">
-                                nécessaire de prendre votre parapluie.
+                                <b title="Il est">nécessaire</b> de prendre votre parapluie.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il est">
-                                trop tard pour voir un film. Jouons aux cartes pour finir la soirée.
+                                trop <b title="Il est">tard</b> pour voir un film.
+                                Jouons aux cartes pour finir la soirée.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il est">
-                                dommage qu’ils doivent tous partir maintenant. On s’amusait bien.
+                                <b title="Il est">dommage</b> qu’ils doivent tous
+                                partir maintenant. On s’amusait bien.
                             </li>
 
                             <li>
                                 Mon frère est amoureux.
                                 <input type="text" pattern="Il est">
-                                fiancé à la même fille depuis des années.
+                                <b title="Il est">fiancé</b> à la même fille depuis des années.
                             </li>
 
                             <li>
                                 Vous connaissez ce danseur ?
                                 <input type="text" pattern="C'est">
-                                un artiste renommé.
+                                un <b title="C'est">artiste</b> renommé.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il est">
-                                mauvais pour votre santé de fumer autant.
+                                <b title="Il est">mauvais</b> pour votre santé de fumer autant.
                             </li>
 
                             <li>
                                 J’ai vu le voleur !
                                 <input type="text" pattern="C'est">
-                                un petit blond avec des grosses lunettes.
+                                un petit <b title="C'est">blond</b> avec des grosses lunettes.
                             </li>
 
                             <li>
                                 Quelle heure est-il ?
                                 <input type="text" pattern="Il est">
-                                8:30.
+                                <b title="Il est">8:30</b>.
                             </li>
 
                             <li>
                                 J’aime votre maison.
                                 <input type="text" pattern="C'est">
-                                une très belle maison.
+                                une très belle <b title="C'est">maison</b>.
                             </li>
 
                             <li>
                                 <input type="text" pattern="C'est">
-                                regrettable que vous ne vouliez pas chanter une petite chanson.
+                                <b title="C'est">regrettable</b> que vous ne vouliez pas
+                                chanter une petite chanson.
                             </li>
 
                             <li>
                                 Nous avons étudié le passé simple.
                                 <input type="text" pattern="C'est">
-                                un temps de verbes très difficile à conjuguer.
+                                un <b title="C'est">temps</b> de verbes très difficile à conjuguer.
                             </li>
 
                             <li>
                                 Courir et parler en même temps,
                                 <input type="text" pattern="c'est">
-                                difficile à faire.
+                                <b title="c'est">difficile</b> à faire.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Il est">
-                                très important de bien prononcer ces mots. Répétez après moi...
+                                très <b title="Il est">important</b> de bien prononcer ces mots. Répétez après moi...
                             </li>
 
                             <li>
                                 <input type="text" pattern="C'est">
-                                en été que les moustiques nous piquent.
+                                en <b title="C'est">été</b> que les moustiques nous piquent.
                             </li>
 
                             <li>
                                 Ma sœur a beaucoup de talent.
                                 <input type="text" pattern="Elle est">
-                                couturière.
+                                <b title="Elle est">couturière</b>.
                             </li>
 
                             <li>
                                 Je te présenterai mon amie Batoul.
                                 <input type="text" pattern="Elle est">
-                                immigrante et habite au Québec depuis 3 ans.
+                                <b title="Elle est">immigrante</b> et habite au Québec depuis 3 ans.
                             </li>
 
                             <li>
                                 Pendant les vacances, Mme Bergeron s’occupera de mes chats.
                                 <input type="text" pattern="C'est">
-                                ma voisine depuis de nombreuses années.
+                                ma <b title="C'est">voisine</b> depuis de nombreuses années.
                             </li>
                         </ol>
                     </section>
