fine-tuning Il-est (complete)

--- a/french/pages/exercise_il_est.html
+++ b/french/pages/exercise_il_est.html
@@ -47,7 +47,7 @@
                                 aussi <b title="Il est">entraîneur</b> de sport dans ses temps libres. <br />
 
                                 <input type="text" pattern="Il est">
-                                très <b title="Il est">compétent</b> dans tout ce qu’il fait. <br />
+                                très <b title="Il est">compétent</b> dans tout ce qu’il fait.
                             </li>
 
                             <li>
@@ -67,7 +67,31 @@
 
                                 <input type="text" pattern="C'est">
                                 une <b title="C'est">personne</b> croyante qui pratique la religion tous les jours.
-                                <br />
+                            </li>
+
+                            <li>
+                                Quelle date sommes-nous ? <br />
+
+                                <input type="text" pattern="C'est">
+                                <b title="C'est">le 18 décembre</b>. <br />
+
+                                <input type="text" pattern="C'est">
+                                <b title="C'est">demain</b> que les vacances commenceront. <br />
+
+                                <input type="text" pattern="Il est">
+                                trop <b title="Il est">tard</b> pour planifier un voyage.
+                            </li>
+
+                            <li>
+                                Avez-vous l’heure s’il vous plaît ? -
+                                <input type="text" pattern="Il est">
+                                <b title="Il est">14 :15</b>.
+                            </li>
+
+                            <li>
+                                Quelle jour sommes-nous ? -
+                                <input type="text" pattern="C'est">
+                                <b title="C'est">mercredi</b>.
                             </li>
 
                             <li>
