--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -82,7 +82,7 @@
                     <tr>
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
+                        <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="11">A1</th>
                         <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="16">
                             A2</th>
                         <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="10">B1</th>
@@ -96,6 +96,7 @@
                         <th data-key="exercise_devoir_pouvoir_falloir_vouloir.html" class="A1 conjugations-plus"
                             colspan="1">Devoir Vouloir Pouvoir Falloir</th>
                         <th data-key="exercise_mon_ton_son.html" class="A1 others" colspan="1">Mon Ton Son</th>
+                        <th data-key="exercise_il_est.html" class="A1 others" colspan="1">Il&nbsp;est C'est</th>
                         <th data-key="exercise_de_du_des.html" class="A1 others" colspan="1">De Du Des</th>
                         <th data-key="exercise_ce_ces_cet.html" class="A1 others" colspan="1">Ce Ces Cet</th>
                         <th data-key="exercise_quand_comment_combien.html" class="A1 others" colspan="1">Quand Comment
@@ -171,6 +172,7 @@
                         </th>
 
                         <th class="A1 others"><a href="exercise_mon_ton_son.html">texte</a></th>
+                        <th class="A1 others"><a href="exercise_il_est.html">texte</a></th>
                         <th class="A1 others"><a href="exercise_de_du_des.html">texte</a></th>
                         <th class="A1 others"><a href="exercise_ce_ces_cet.html">texte</a></th>
 
@@ -270,6 +272,7 @@
                             <td class="A1 conjugations-plus" data-key="exercise_devoir_pouvoir_falloir_vouloir.html">
                             </td>
                             <td class="A1 others" data-key="exercise_mon_ton_son.html"></td>
+                            <td class="A1 others" data-key="exercise_il_est.html"></td>
                             <td class="A1 others" data-key="exercise_de_du_des.html"></td>
                             <td class="A1 others" data-key="exercise_ce_ces_cet.html"></td>
                             <td class="A1 others" data-key="exercise_quand_comment_combien.html"></td>
