added text exercise for Savoir-Connaitre (incomplete)

--- a/french/index.html
+++ b/french/index.html
@@ -300,6 +300,12 @@
     <a href="pages/exercise_qui_que_dont_ou.html">exercice de texte</a>
   </div>
 
+  <div class="card">
+    <span class="cefr">B1</span>
+    <header>Savoir ou Connaître</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_savoir_connaitre.html">exercice de texte</a>
+  </div>
 
   <hr />
 
