fine-tuned Il-EST

--- a/french/pages/exercise_il_est.html
+++ b/french/pages/exercise_il_est.html
@@ -101,7 +101,7 @@
 
                             <li>
                                 <input type="text" pattern="Il était">
-                                <b title="Il était">une fois</b>, un homme et sa fille qui vivaient pauvrement. Un jour
+                                une fois, un homme et sa fille qui <b title="Il était">vivaient</b> pauvrement. Un jour
                                 ...
                             </li>
 
@@ -118,7 +118,7 @@
 
                             <li>
                                 Aujourd’hui,
-                                <input type="text" pattern="c'est">
+                                <input type="text" pattern="[Cc]'est">
                                 le grand <b title="c'est">jour</b>. Rémi et moi, nous nous marions !
                             </li>
 
@@ -150,7 +150,7 @@
 
                             <li>
                                 Faire la vaisselle et le ménage,
-                                <input type="text" pattern="c'est">
+                                <input type="text" pattern="[Cc]'est">
                                 <b title="c'est">ennuyeux</b>.
                             </li>
 
@@ -221,7 +221,7 @@
 
                             <li>
                                 Courir et parler en même temps,
-                                <input type="text" pattern="c'est">
+                                <input type="text" pattern="[Cc]'est">
                                 <b title="c'est">difficile</b> à faire.
                             </li>
 
